# rules_capnproto

./: MODULE.bazel  README.md
capnp/: extensions.bzl
examples/cc_example/: MODULE.bazel
